# yt-dlp-playlists-downloader

./: .gitignore  README.md  config.toml  main.py  playlists.toml  pyproject.toml  requirements.txt  template.ods
gui/: app.py  icon_service.py  main_window.py
gui/ui/: main_window.ui
src/yt_dlp_playlists_downloader/: __init__.py  cli.py
src/yt_dlp_playlists_downloader/core/: __init__.py  audio.py  config.py  constants.py  downloader.py  errors.py  filenames.py  logging.py  metadata.py  paths.py  playlists.py  processes.py  toml_io.py
src/yt_dlp_playlists_downloader/gui/: __init__.py  app.py  icon_service.py  main_window.py
src/yt_dlp_playlists_downloader/gui/ui/: main_window.ui
src/yt_dlp_playlists_downloader/resources/: __init__.py  playlists.toml
src/ytdlp_playlists_downloader/: cli.py
src/ytdlp_playlists_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ytdlp_playlists_downloader/core/: audio.py  constants.py  covers.py  downloader.py
src/ytdlp_playlists_downloader/gui/: app.py  main_window.py  theme_service.py
